add current interaction to dto
